# codedir2pdf

./: .codeignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.py
assets/: source.gitignore
codedir2pdf/: code2pdf.py  codedir2pdf.py
codedir2pdf/codedir2pdf/: codedir2pdf.py
src/: code2pdf.py  codelib.py  get_codeignore.py  loopfolder.py  main.py  pdf_location.py  print_output.py
