[tool.poetry]
name = "codedir2pdf"
version = "0.1.0"
description = "Transform source code files into PDF files."
authors = ["Sedir Morais <philippi.sedir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
Pygments = "==2.2.0"
PyQt5 = "^5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
codedir2pdf = 'codedir2pdf.codedir2pdf:main'
code2pdf = 'codedir2pdf.code2pdf:main'